Fix alignment on the guide page

--- a/style.scss
+++ b/style.scss
@@ -371,7 +371,7 @@ body
         iframe
         {
             min-height: 80%;
-            width: 100%;
+            min-width: -webkit-fill-available;
         }
 
 
